# goaldriven

./: goaldriven.cabal
src/GoalDriven/: Solver.hs
src/GoalDriven/Solver/: Types.hs
