cabal-version:      2.4
name:               goaldriven
version:            0.1.0.0
author:             John Haynes
maintainer:         john.andrew.haynes@gmail.com

library
    exposed-modules:    GoalDriven.Solver,
                        GoalDriven.Solver.Types
    default-extensions: GeneralizedNewtypeDeriving, ScopedTypeVariables
    ghc-options:        -Wall
    build-depends:      base, containers, heaps, text
    hs-source-dirs:     src
    default-language:   Haskell2010
